# alienbreed

./: .gitignore  CMakeLists.txt  alienbreed.js  convert_assets.sh  index.html
.github/prompts/: plan-alienBreedPortCompletion.prompt.md
.github/workflows/: pages.yml  preview.yml
build2/: CMakeCache.txt  Makefile  alienbreed  cmake_install.cmake  convert_bitplanes  convert_tileset
build_check/: .ninja_deps  .ninja_log  CMakeCache.txt  alienbreed  build.ninja  cmake_install.cmake  convert_audio  convert_bitplanes  convert_sprites  convert_tileset  parse_levels
build_check2/: CMakeCache.txt  Makefile  alienbreed  cmake_install.cmake  convert_audio  convert_sprites  parse_levels
docs/: asm_mapping.md
preview/40/: index.html
preview/43/: index.html
preview/48/: alienbreed.js  index.html
preview/50/: alienbreed.js
preview/53/: alienbreed.js
preview/55/: alienbreed.js
preview/67/: alienbreed.js
preview/73/: index.html
preview/81/: index.html
src/c/: types.h
src/c/engine/: alien_gfx.c  alien_gfx.h  anim_gfx.c  anim_gfx.h  palette.c  palette.h  sprite.c  sprite.h  tile_anim.c  tile_anim.h  tilemap.c  tilemap.h  typewriter.c  typewriter.h
src/c/game/: alien.c  alien.h  briefing.c  briefing.h  constants.h  debug.c  debug.h  end.c  end.h  gameover.c  gameover.h  hud.c  hud.h  intex.c  intex.h  level.c  level.h  main.c  menu.c  menu.h  player.c  player.h  story.c  story.h
src/c/hal/: asset_bundle.h  asset_bundle_empty.c  audio.c  audio.h  blitter.c  blitter.h  hal.c  hal.h  input.c  input.h  soundmon.c  soundmon.h  timer.c  timer.h  vfs.c  vfs.h  video.c  video.h
src/main/: main.asm
src/wasm/: shell.html
tools/: bin2c.c  convert_audio.c  convert_bitplanes.c  convert_sprites.c  convert_tileset.c  parse_levels.c  view_raw.py
